/////
package alarmclient;
////
message UnhandleAlarmInfo
{
	message Item
	{
		required string name = 1;
		required int32 level = 2;
		required string typeDesc = 3;
		required string plan = 4;
		required string msg = 5;
		required string addr = 6;
		required string contact = 7;
		required string index = 8;
		required string time = 9;
		message Camera
		{
			required int32 id = 1;
		}
		repeated Camera camera = 10;
	}
	repeated Item uaItem = 1;
}